--- a/transmission_model/config/model.props
+++ b/transmission_model/config/model.props
@@ -4,3 +4,7 @@ r.file = ../r/transmission_model.R
 
 like.age.prob = 0.1
 unlike.age.prob = 0.2
+
+max.survival = 50
+daily.death.prob = 0.0001
+daily.birth.rate = 0.01
