--- a/transmission_model/config/model.props
+++ b/transmission_model/config/model.props
@@ -1,10 +1,5 @@
 random.seed = 1
+stop.at = 200
 
-r.file = ../r/transmission_model.R
-
-like.age.prob = 0.1
-unlike.age.prob = 0.2
-
-max.survival = 50
-daily.death.prob = 0.0001
-daily.birth.rate = 0.01
+r.parameters.file = ../r/common/parameters.R
+r.file = ../r/network_model/transmission_model.R
