file output "framework" with basic counts and partnership events

--- a/transmission_model/config/model.props
+++ b/transmission_model/config/model.props
@@ -1,5 +1,5 @@
 random.seed = 1
-stop.at = 50
+stop.at = 20
 
 r.parameters.file = ../r/common/parameters.R
 r.file = ../r/network_model/transmission_model.R
@@ -7,4 +7,5 @@ r.file = ../r/network_model/transmission_model.R
 event.file = ./events.h5
 event.file.buffer.size = 200;
 
-output.file = ./output/counts.csv
+per.tick.counts.output.file = ./output/counts.csv
+partnership.events.file = ./output/partnership_events.csv
