--- a/transmission_model/config/model.props
+++ b/transmission_model/config/model.props
@@ -14,4 +14,4 @@ biomarker.number.of.persons.to.log = 100
 death.events.file = ./output/death_events.csv
 
 net.save.file = ./output/network.RDS
-save.network.at = 4, end
+save.network.at = end
