--- a/transmission_model/config/model.props
+++ b/transmission_model/config/model.props
@@ -1,6 +1,6 @@
 stop.at = 10000
 
-r.parameters.file = ../r/common/parameters.R
+r.parameters.file = ../r/common/parameters2.R
 r.file = ../r/network_model/transmission_model.R
 
 per.tick.counts.output.file = ./output/counts.csv
