added casual network broken transmission_model.R

--- a/transmission_model/config/model.props
+++ b/transmission_model/config/model.props
@@ -1,5 +1,8 @@
 stop.at = 10000
 
+net.variable.name = nw
+casual.net.variable.name = n_cas
+
 r.parameters.file = ../r/common/chicago_parameters.R
 r.file = ../r/network_model/transmission_model.R
 
