--- a/transmission_model/config/model.props
+++ b/transmission_model/config/model.props
@@ -15,5 +15,7 @@ biomarker.number.of.persons.to.log = 100
 
 death.events.file = ./output/death_events.csv
 
-net.save.file = ./output/network.RDS
+net.save.file = ./output/main_network.RDS
+casual.net.save.file = ./output/casual_network.RDS
+
 save.network.at = end
