added network overlap counting

--- a/transmission_model/config/model.props
+++ b/transmission_model/config/model.props
@@ -19,3 +19,4 @@ net.save.file = ./output/main_network.RDS
 casual.net.save.file = ./output/casual_network.RDS
 
 save.network.at = end
+count.overlaps = true
