--- a/transmission_model/config/model.props
+++ b/transmission_model/config/model.props
@@ -14,6 +14,7 @@ biomarker.log.file = ./output/biomarker_log.csv
 biomarker.number.of.persons.to.log = 100
 
 death.events.file = ./output/death_events.csv
+person.data.file = ./output/person_data.csv
 
 net.save.file = ./output/main_network.RDS
 casual.net.save.file = ./output/casual_network.RDS
