--- a/transmission_model/config/model.props
+++ b/transmission_model/config/model.props
@@ -24,6 +24,7 @@ biomarker.number.of.persons.to.log = 100
 death.events.file = death_events.csv
 person.data.file = person_data.csv
 testing.events.file = testing_events.csv
+art.events.file = art_events.csv
 
 net.save.file = main_network.RDS
 casual.net.save.file = casual_network.RDS
