--- a/transmission_model/config/model.props
+++ b/transmission_model/config/model.props
@@ -1,6 +1,6 @@
 global.random.seed=42
 
-stop.at = 25000
+stop.at = 50000
 
 net.variable.name = nw
 casual.net.variable.name = n_cas
@@ -17,17 +17,17 @@ r.file = ../r/network_model/transmission_model_tergmlite.R
 
 output.directory = ./output
 per.tick.counts.output.file = counts.csv
-partnership.events.file = partnership_events.csv
-infection.events.file = infection_events.csv
+#partnership.events.file = partnership_events.csv
+#infection.events.file = infection_events.csv
 
-biomarker.log.file = biomarker_log.csv
+#biomarker.log.file = biomarker_log.csv
 biomarker.number.of.persons.to.log = 100
 
-death.events.file = exit_events.csv
-person.data.file = person_data.csv
-testing.events.file = testing_events.csv
-art.events.file = art_events.csv
-prep.events.file = prep_events.csv
+#death.events.file = exit_events.csv
+#person.data.file = person_data.csv
+#testing.events.file = testing_events.csv
+#art.events.file = art_events.csv
+#prep.events.file = prep_events.csv
 
 net.save.file = main_network.RDS
 casual.net.save.file = casual_network.RDS
@@ -35,4 +35,4 @@ casual.net.save.file = casual_network.RDS
 save.network.at = end
 count.overlaps = true
 
-age.threshold = 26
+age.threshold = 30
