--- a/transmission_model/config/model.props
+++ b/transmission_model/config/model.props
@@ -29,6 +29,8 @@ biomarker.number.of.persons.to.log = 100
 #art.events.file = art_events.csv
 #prep.events.file = prep_events.csv
 
+#serodiscordant.log.file = serodiscordant_log.csv
+
 net.save.file = main_network.RDS
 casual.net.save.file = casual_network.RDS
 
