--- a/transmission_model/config/model.props
+++ b/transmission_model/config/model.props
@@ -29,7 +29,9 @@ biomarker.number.of.persons.to.log = 100
 #art.events.file = art_events.csv
 #prep.events.file = prep_events.csv
 
-#serodiscordant.log.file = serodiscordant_log.csv
+#serodiscordant.prep.log.file = serodiscordant_log.csv
+#default.prep.log.file = base_prep_log.csv
+#network.prep.log.file = network_prep_log.csv
 
 net.save.file = main_network.RDS
 casual.net.save.file = casual_network.RDS
