--- a/transmission_model/config/model.props
+++ b/transmission_model/config/model.props
@@ -32,6 +32,7 @@ biomarker.number.of.persons.to.log = 100
 #serodiscordant.prep.log.file = serodiscordant_log.csv
 #default.prep.log.file = base_prep_log.csv
 #network.prep.log.file = network_prep_log.csv
+#random.selection.prep.log.file = random_selection_prep_log.csv
 
 net.save.file = main_network.RDS
 casual.net.save.file = casual_network.RDS
