--- a/transmission_model/config/houston_model.props
+++ b/transmission_model/config/houston_model.props
@@ -1,8 +1,6 @@
 global.random.seed=42
 
-#stop.at = 36500 # 100 years
-#stop.at = 3650 # 10 years
-stop.at = 7300 # 20 years
+stop.at = 36500
 
 net.variable.name = nw
 casual.net.variable.name = n_cas
@@ -10,12 +8,12 @@ casual.net.variable.name = n_cas
 r.parameters.non.derived = ../r/common/houston_params_nonderived.R
 r.parameters.derived = ../r/common/houston_params_derived.R
 
-r.file = ../r/network_model/transmission_model_tergmlite.R
+r.file = ../r/network_model/houston_transmission_model_tergmlite_n5000.R
 
 # if these properties are not commented out
-# then these networks will replace existing ones
-#main.network.file = ../r/network_model/main_network.RDS
-#casual.network.file = ../r/network_model/casual_network.RDS
+# then these networks will replace existing ones (NEED to comment these out for calibration)
+#main.network.file = ../r/network_model/main_network_prep-use-1-yr-calibrate-chicago-instance_242-36500.RDS
+#casual.network.file = ../r/network_model/casual_network_prep-use-1-yr-calibrate-chicago-instance_242-36500.RDS
 
 output.directory = ./output
 per.tick.counts.output.file = counts.csv
@@ -30,6 +28,10 @@ biomarker.number.of.persons.to.log = 100
 #testing.events.file = testing_events.csv
 #art.events.file = art_events.csv
 #prep.events.file = prep_events.csv
+
+#serodiscordant.prep.log.file = serodiscordant_prep_log.csv
+#default.prep.log.file = base_prep_log.csv
+#network.prep.log.file = network_prep_log.csv
 
 net.save.file = main_network.RDS
 casual.net.save.file = casual_network.RDS
