Updated houston files for new data init

--- a/transmission_model/config/houston_model.props
+++ b/transmission_model/config/houston_model.props
@@ -8,7 +8,8 @@ casual.net.variable.name = n_cas
 r.parameters.non.derived = ../r/common/houston_params_nonderived.R
 r.parameters.derived = ../r/common/houston_params_derived.R
 
-r.file = ../r/network_model/houston_transmission_model_tergmlite_n5000.R
+r.file = ../r/network_model/transmission_model_tergmlite.R
+initial.data.file = ../r/network_model/houston_cas_net_n5000.RData
 
 # if these properties are not commented out
 # then these networks will replace existing ones (NEED to comment these out for calibration)
