--- a/transmission_model/config/chi_model.props
+++ b/transmission_model/config/chi_model.props
@@ -45,3 +45,6 @@ count.overlaps = true
 
 output.age.range = 20-30,30-100
 input.age.threshold = 26
+
+input.lower.jail.term.prob = 1
+input.upper.jail.term.prob = 200
