--- a/transmission_model/config/houston_model.props
+++ b/transmission_model/config/houston_model.props
@@ -22,7 +22,7 @@ per.tick.counts.output.file = counts.csv
 #infection.events.file = infection_events.csv
 
 #biomarker.log.file = biomarker_log.csv
-biomarker.number.of.persons.to.log = 100
+biomarker.persons.to.log = random:100
 
 #death.events.file = exit_events.csv
 #person.data.file = person_data.csv
@@ -39,6 +39,13 @@ casual.net.save.file = casual_network.RDS
 
 save.network.at = end
 count.overlaps = true
+
+input.lower.jail.term.prob = 1
+input.upper.jail.term.prob = 200
+
+incarceration.prob = 0.0
+# probability of incareration for previously jailed
+incarceration.prob.prev = 0.0
 
 output.age.range = 20-30,30-100
 input.age.threshold = 26
