--- a/transmission_model/config/chi_model.props
+++ b/transmission_model/config/chi_model.props
@@ -2,8 +2,9 @@ global.random.seed=42
 
 #stop.at = 36500 # 100 years
 #stop.at = 3650 # 10 years
-stop.at = 7300 # 20 years
 #stop.at = 1000
+stop.at = 7300 # 20 years
+#stop.at = 100
 
 net.variable.name = nw
 casual.net.variable.name = n_cas
@@ -47,9 +48,18 @@ count.overlaps = true
 output.age.range = 20-30,30-100
 input.age.threshold = 26
 
-input.lower.jail.term.prob = 1
-input.upper.jail.term.prob = 200
+
+#----jail related: 
+network.decay.prob.main.file    = ../config/net_decay_prob_main.csv
+network.decay.prob.casual.file  = ../config/net_decay_prob_casual.csv
+
+# input.lower.jail.term.prob = 1
+# input.upper.jail.term.prob = 200
 
 incarceration.prob = 0.0
 # probability of incareration for previously jailed
 incarceration.prob.prev = 0.0
+
+in.jail.infection.incidence.rate =  0.000182 
+jail.serving.time.mean.prob = 0.0172 #1/58 days
+vulnerability.mean.prob = 0.0111  #1/90 days
