--- a/transmission_model/config/houston_model.props
+++ b/transmission_model/config/houston_model.props
@@ -45,7 +45,7 @@ input.upper.jail.term.prob = 200
 
 incarceration.prob = 0.0
 # probability of incareration for previously jailed
-incarceration.prob.prev = 0.0
+incarceration.with.cji.prob = 0.0
 
 output.age.range = 20-30,30-100
 input.age.threshold = 26
