--- a/transmission_model/config/baseline_aids_model.props
+++ b/transmission_model/config/baseline_aids_model.props
@@ -58,8 +58,8 @@ input.age.threshold = 26
 network.decay.prob.main.file    = /home/bmardestani/BARS/transmission_model/data/net_decay_prob_main.csv
 network.decay.prob.casual.file  = /home/bmardestani/BARS/transmission_model/data/net_decay_prob_casual.csv
 
-is.network.disruption.on = false;
-is.care.disruption.on = false;
+is.network.disruption.on = false
+is.care.disruption.on = false
 
 #incarceration.prob = 0.0
 incarceration.prob = 0.0000787
