--- a/transmission_model/config/jcm_model.props
+++ b/transmission_model/config/jcm_model.props
@@ -59,7 +59,8 @@ network.decay.prob.main.file    = /home/bmardestani/BARS/transmission_model/data
 network.decay.prob.casual.file  = /home/bmardestani/BARS/transmission_model/data/net_decay_prob_casual.csv
 
 is.network.disruption.on = false
-is.care.disruption.on = false
+#is.care.disruption.on = false
+is.care.disruption.on = true
 
 #incarceration.prob = 0.0
 incarceration.prob = 0.0000787
@@ -75,6 +76,7 @@ in.jail.infection.incidence.rate =  0.000091
 
 jail.serving.time.mean = 58
 
-post.release.interference.period.mean = 90
+#post.release.interference.period.mean = 90
+post.release.interference.period.mean = 30
 
 network.retention.multiplier = 1
