Updated existing unit tests and cleaned up some jail code

--- a/transmission_model/test_data/testing_ranges.props
+++ b/transmission_model/test_data/testing_ranges.props
@@ -1,12 +1,12 @@
-# range of number of tests in last two years min-max, fraction of the population
+# range of number of tests in last two years min-max| fraction of the population
 # when these are in the R file the values need to be quoted
-testing.prob.lt.1 = 1-3,0.4
-testing.prob.lt.2 = 4-6,0.3
-testing.prob.lt.3 = 7-8,0.3
+testing.prob.lt.1 = 1-3|0.4
+testing.prob.lt.2 = 4-6|0.3
+testing.prob.lt.3 = 7-8|0.3
 
-testing.prob.gte.1 = 1-3,0.2
-testing.prob.gte.2 = 4-6,0.1
-testing.prob.gte.3 = 7-8,0.7
+testing.prob.gte.1 = 1-3|0.2
+testing.prob.gte.2 = 4-6|0.1
+testing.prob.gte.3 = 7-8|0.7
 
 non.testers.prop.lt = 0 
 non.testers.prop.gte = 1
@@ -26,4 +26,6 @@ prep.never.adherent.trans.reduction = 0.0
 prep.partial.pos.adherent.trans.reduction = 0.81 
 prep.partial.neg.adherent.trans.reduction = 0.31
 
-age.threshold = 26
+input.age.threshold = 26
+
+
