--- a/transmission_model/config/chi_model.props
+++ b/transmission_model/config/chi_model.props
@@ -3,8 +3,9 @@ global.random.seed=42
 #stop.at = 36500 # 100 years
 #stop.at = 3650 # 10 years
 #stop.at = 1000
-stop.at = 7300 # 20 years
+#stop.at = 7300 # 20 years
 #stop.at = 730
+stop.at = 400
 
 net.variable.name = nw
 casual.net.variable.name = n_cas
@@ -53,22 +54,3 @@ input.age.threshold = 26
 network.decay.prob.main.file    = ../data/net_decay_prob_main.csv
 network.decay.prob.casual.file  = ../data/net_decay_prob_casual.csv
 
-is.network.disruption.on = false;
-is.care.disruption.on = false;
-
-#incarceration.prob = 0.0
-incarceration.prob = 0.0000787
-#incarceration.prob = 0.002
-
-#incarceration.with.cji.prob = 0.0
-incarceration.with.cji.prob = 0.0005173
-#incarceration.with.cji.prob = 0.002
-
-# 0.000182 /2 
-in.jail.infection.incidence.rate =  0.000091 
-
-jail.serving.time.mean = 58
-
-post.release.interference.period.mean = 90
-
-network.retention.multiplier = 1
