--- a/transmission_model/config/chi_model.props
+++ b/transmission_model/config/chi_model.props
@@ -39,6 +39,7 @@ biomarker.persons.to.log = random:5
 #default.prep.log.file = base_prep_log.csv
 #network.prep.log.file = network_prep_log.csv
 #random.selection.prep.log.file = random_selection_prep_log.csv
+#viral.load.events.file = viral_load_events.csv
 
 net.save.file = main_network.RDS
 casual.net.save.file = casual_network.RDS
