Implement the counseling and behavioral treatment

--- a/transmission_model/config/chi_model.props
+++ b/transmission_model/config/chi_model.props
@@ -49,6 +49,7 @@ count.overlaps = true
 output.age.range = 20-30,30-100
 input.age.threshold = 26
 
+is.counseling.and.behavioral.treatment.on = false
 
 #----jail related: 
 network.decay.prob.main.file    = ../data/net_decay_prob_main.csv
