--- a/transmission_model/config/jcm_model.props
+++ b/transmission_model/config/jcm_model.props
@@ -2,7 +2,7 @@
 global.random.seed=1
 
 #stop.at = 36500 # 100 years
-stop.at = 3650 
+stop.at = 10950
 #stop.at = 7300 # 20 years
 #stop.at = 730
 
@@ -28,7 +28,7 @@ per.tick.counts.output.file = counts.csv
 #infection.events.file = infection_events.csv
 
 #biomarker.log.file = biomarker_log.csv
-biomarker.persons.to.log = random:5
+#biomarker.persons.to.log = random:5
 
 #death.events.file = exit_events.csv
 #person.data.file = person_data.csv
@@ -44,7 +44,7 @@ biomarker.persons.to.log = random:5
 net.save.file = main_network.RDS
 casual.net.save.file = casual_network.RDS
 
-save.network.at = end
+save.network.at = 10950, end
 count.overlaps = true
 
 output.age.range = 20-30,30-100
